# bulls-and-cows-bot

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  tests.cpp
src/: ConsoleGame.cpp  ConsoleGame.hpp  Core.cpp  Core.hpp  CoreDefs.hpp  Game.cpp  Game.hpp  GameNumber.cpp  GameNumber.hpp  Logger.cpp  Logger.hpp  Utils.cpp  Utils.hpp
src/algo/: Algorithm.cpp  Algorithm.hpp  Aliases.hpp  AsyncCache.hpp  BullsCows.cpp  BullsCows.hpp  GameNumber.cpp  GameNumber.hpp  NumberGenerator.cpp  NumberGenerator.hpp
